--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -75,7 +75,8 @@
             <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
             <small style="text-align: center;">To see all teams ranked by weighted score <a href="teams" style="all: unset; color: #68C3E2;">here</a></small><br>
-            <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
+            <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small><br>
+            <small style="text-align: center;">Team notes can be accessed  <a href="notes" style="all: unset; color: #68C3E2;">here</a></small>
         </form>
         <br><br>
     </div>
