--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -85,7 +85,7 @@
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Match Data</h4><br>
             <fieldset>
-            <fieldset>
+            <fieldset style="overflow: scroll;">
                 <h3>Team <%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
                 <table>
                     <tr>
