--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -89,7 +89,7 @@
             <h4>Match Data</h4><br>
             <fieldset>
             <fieldset style="overflow: scroll;">
-                <h3>Team <%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
+                <h3><%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
                 <table>
                     <tr>
                       <th>Match Number</th>
