--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -47,8 +47,8 @@
             <br><fieldset>
                 <label>Event Code: </label><br>
                 <select name="event">
-                    <option value="CADA" selected>CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="CADA">CADA - Sacramento Regional</option>
+                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                 </select>
             </fieldset>
             <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Search</button><br>
