attempt data validation

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -60,14 +60,14 @@
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4 style="color: red; display: <%= errorDisplay %>"><%= errorMessage %></h4>
-            <h4>Match Data</h4><br>
+            <h4>Match Data</h4>
             <fieldset>
                 <select name="type">
                     <option value="team" selected>Team </option>
                     <option value="match">Match </option>
                 </select>
-                <input type="tel" name="number" required><br>
-            <br><fieldset>
+                <input type="tel" name="number" required>
+            <br><fieldset><br>
                 <label>Event Code: </label><br>
                 <select name="event">
                     <option value="CADA">CADA - Sacramento Regional</option>
