total grid points

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -93,11 +93,11 @@
                 <table>
                     <tr>
                       <th>Match Number</th>
-                      <th>Auto Taxi</th> 
                       <th>Auto Score</th>
                       <th>Auto Charge</th>
                       <th>Teleop Score</th>
                       <th>Teleop Charge</th>
+                      <th>Grid Points</th>
                       <th>Cycle Time</th>
                       <th>Match Performance Score</th>
                     </tr>
