--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -47,6 +47,8 @@
             color: var(--textColor);
             border-top: none;
             border-bottom: solid var(--gameFlairColor) 1px;
+            position: sticky;
+            top: 0px;
         }
 
         td:first-child, th:first-child {
@@ -88,8 +90,8 @@
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Match Data</h4><br>
-            <div style="all: unset; overflow-x: auto;">
                 <h3><%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
+                <div style="overflow-x: auto; width: 85vw;">
                 <table>
                     <tr>
                       <th>Match Number</th>
