center align content

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -91,7 +91,7 @@
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Match Data</h4><br>
                 <h3><%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
-                <div style="overflow-x: auto; width: 85vw;">
+                <div style="overflow-x: auto; width: 85vw; display: flex; align-items: center; align-content: center; justify-content: center;">
                 <table>
                     <tr>
                       <th>Match Number</th>
