--- a/src/index.ejs
+++ b/src/index.ejs
@@ -107,8 +107,7 @@
             You are offline
         </div>
         <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h3><span style="color: rgb(88, 101, 242); background-color: rgba(88, 101, 242, 0.1); border-radius: 4px; padding: 5px;" id="profileName">@<%= userName %></span><span>&emsp;</span></h3><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
             <div style="display: flex; flex-direction: column;">
             <a href="main" class="gameflair1" style="order: <%- order1 %>; margin-bottom: 5%;">Match Scouting<br></a>
             <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
