update entire sw bundle ot handle updates

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -97,6 +97,7 @@
         }
     </style>
     <script src="appinstall.js"></script>
+    <script>registerSW()</script>
 </head>
 
 <body id="body" class="dark-mode">
