--- a/src/index.ejs
+++ b/src/index.ejs
@@ -97,7 +97,7 @@
         }
     </style>
     <script src="appinstall.js"></script>
-    <!--<script>registerSW()</script>-->
+    <script>registerSW()</script>
 </head>
 
 <body id="body" class="dark-mode">
