--- a/src/index.ejs
+++ b/src/index.ejs
@@ -96,11 +96,11 @@
             100% { opacity: 0 }
         }
     </style>
-    <script>
+    <!--<script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/sw.js', { scope: "/" });
         }
-    </script>
+    </script>-->
 </head>
 
 <body id="body" class="dark-mode">
