--- a/src/index.ejs
+++ b/src/index.ejs
@@ -98,7 +98,7 @@
     </style>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js', { scope: "/" });
+            navigator.serviceWorker.register('/sw.js', { scope: "/" });
         }
     </script>
 </head>
