--- a/src/index.ejs
+++ b/src/index.ejs
@@ -103,7 +103,7 @@
     </script>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container">
         <div class="offlineAlert" id="offlineAlert" style="display: none">
