--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -52,7 +52,7 @@
     </style>
 </head>
 
-<body id="body" class="dark-mode">
+<body class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
