--- a/src/float.css
+++ b/src/float.css
@@ -6,6 +6,9 @@ body {
     --defaultInputColor: #fff;
     --inputColorSelected: #FFB600;
     --gameFlairColor: #68C3E2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 @media (prefers-color-scheme: light) {
     body {
