fix index.ejs formatting

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -113,18 +113,17 @@
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
             <div style="display: flex; flex-direction: column;">
-            <a href="main" class="gameflair1" style="order: <%- order1 %>; margin-bottom: 5%;">Match Scouting<br></a>
-            <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
-            <a href="matches" class="gameflair1" style="order: <%- order3 %>; margin-bottom: 5%;">Match List<br></a>
-            <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
-            <%- additionalURLs %>
+                <a href="main" class="gameflair1" style="order: <%- order1 %>; margin-bottom: 5%;">Match Scouting<br></a>
+                <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
+                <a href="matches" class="gameflair1" style="order: <%- order3 %>; margin-bottom: 5%;">Match List<br></a>
+                <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
+                <%- additionalURLs %>
+                <small style="order: 5"><a href="scouts" style="all: unset; margin-bottom: 5%;">Top Scouts</a></small>
+                <small style="order: 6"><a href="points" style="all: unset; margin-bottom: 5%;">Points</a></small>
+                <small style="order: 7"><a href="settings" style="all: unset; margin-bottom: 5%;">Settings</a></small>
             </div>
-            <br><br>
         </form>
     </div>
-    <br><small><a href="scouts" style="all: unset;">Top Scouts</a></small>
-    <br><small><a href="points" style="all: unset;">Points</a></small>
-    <br><small><a href="settings" style="all: unset;">Settings</a></small>
     <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
     <script>
         window.addEventListener("load", () => {
