--- a/src/assets/spin.css
+++ b/src/assets/spin.css
@@ -1,1 +1,216 @@
-@-webkit-keyframes spin0{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21600deg)}}@-webkit-keyframes spin1{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21630deg)}}@-webkit-keyframes spin2{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21660deg)}}@-webkit-keyframes spin3{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21690deg)}}@-webkit-keyframes spin4{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21720deg)}}@-webkit-keyframes spin5{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21750deg)}}@-webkit-keyframes spin6{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21780deg)}}@-webkit-keyframes spin7{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21810deg)}}@-webkit-keyframes spin8{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21840deg)}}@-webkit-keyframes spin9{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21870deg)}}@-webkit-keyframes spin10{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21900deg)}}@-webkit-keyframes spin11{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21930deg)}}.spinc11{-webkit-animation-name:spin0;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc10{-webkit-animation-name:spin1;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc9{-webkit-animation-name:spin2;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc8{-webkit-animation-name:spin3;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc7{-webkit-animation-name:spin4;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc6{-webkit-animation-name:spin5;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc5{-webkit-animation-name:spin6;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc4{-webkit-animation-name:spin7;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc3{-webkit-animation-name:spin8;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc2{-webkit-animation-name:spin9;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc1{-webkit-animation-name:spin10;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc0{-webkit-animation-name:spin11;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}
+@keyframes spin0{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21600deg);
+        -webkit-transform: rotate(21600deg);
+    }
+}
+@keyframes spin1{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21630deg);
+        -webkit-transform: rotate(21630deg);
+    }
+}
+@keyframes spin2{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21660deg);
+        -webkit-transform: rotate(21660deg);
+    }
+}
+@keyframes spin3{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21690deg);
+        -webkit-transform: rotate(21690deg);
+    }
+}
+@keyframes spin4{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21720deg);
+        -webkit-transform: rotate(21720deg);
+    }
+}
+@keyframes spin5{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21750deg);
+        -webkit-transform: rotate(21750deg);
+    }
+}
+@keyframes spin6{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21780deg);
+        -webkit-transform: rotate(21780deg);
+    }
+}
+@keyframes spin7{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21810deg);
+        -webkit-transform: rotate(21810deg);
+    }
+}
+@keyframes spin8{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21840deg);
+        -webkit-transform: rotate(21840deg);
+    }
+}
+@keyframes spin9{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21870deg);
+        -webkit-transform: rotate(21870deg);
+    }
+}
+@keyframes spin10{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21900deg);
+        -webkit-transform: rotate(21900deg);
+    }
+}
+@keyframes spin11{
+    2% {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(21930deg);
+        -webkit-transform: rotate(21930deg);
+    }
+}
+.spinc11{
+    animation-name: spin0;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin0;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc10{
+    animation-name: spin1;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin1;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc9{
+    animation-name: spin2;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin2;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc8{
+    animation-name: spin3;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin3;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc7{
+    animation-name: spin4;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin4;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc6{
+    animation-name: spin5;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin5;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc5{
+    animation-name: spin6;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin6;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc4{
+    animation-name: spin7;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin7;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc3{
+    animation-name: spin8;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin8;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc2{
+    animation-name: spin9;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin9;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc1{
+    animation-name: spin10;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin10;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
+.spinc0{
+    animation-name: spin11;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: spin11;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-fill-mode: forwards;
+}
