minimize resource loading
remove discord bot

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -10,47 +10,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/table.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
-    <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-        table {
-            border-collapse:separate;
-            border: solid var(--gameFlairColor) 1px;
-            border-radius: 6px;
-            overflow: auto;
-        }
-        td, th {
-            border-left: solid var(--gameFlairColor) 1px;
-            border-top: solid var(--inputColorSelected) 1px;
-        }
-        th {
-            background-color: var(--transparent);
-            color: var(--textColor);
-            border-top: none;
-            border-bottom: solid var(--gameFlairColor) 1px;
-        }
-        td:first-child, th:first-child {
-            border-left: none;
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode">
