--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,7 +13,8 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/homepage.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="public/10.2__iPad_landscape.png">
@@ -50,53 +51,7 @@
     <link rel="apple-touch-startup-image" media="screen and (device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="public/10.9__iPad_Air_landscape.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="public/iPhone_14_Plus__iPhone_13_Pro_Max__iPhone_12_Pro_Max_portrait.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="public/11__iPad_Pro__10.5__iPad_Pro_portrait.png">
-    <script src="form.min.js"></script>
-    <style>
-        body {
-            text-align: center;
-        }
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-        }
-        a:hover,a:active {
-            color: var(--textColor);
-        }
-        #rolesDisplay span{
-            display:none;
-        }
-        #rolesDisplay br{
-            display:none;
-        }
-        #rolesDisplay span:first-child{
-            display:inline;
-        }
-        .offlineAlert {
-            padding: 10px;
-            background-color: #f00;
-            color: white;
-            position: absolute;
-        }
-        .closeAlert {
-            margin-left: 15px;
-            color: #fff;
-            float: right;
-            font-size: 22px;
-            line-height: 17.5px;
-            cursor: pointer;
-        }
-        .closeAlert:hover {
-            color: #121212;
-        }
-        .fadeout {
-            animation: fade 1s forwards ease-out;
-        }
-        @keyframes fade {
-            0% { opacity: 1 }
-            100% { opacity: 0 }
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode">
@@ -122,26 +77,7 @@
         </form>
     </div>
     <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
-    <script>
-        window.addEventListener("load", () => {
-            checkNetwork(navigator.onLine);
-
-            window.addEventListener("online", () => {
-                checkNetwork(true);
-            });
-
-            window.addEventListener("offline", () => {
-                checkNetwork(false);
-            });
-        });
-        function checkNetwork(online) {
-            const alert = document.getElementById("offlineAlert");
-            if (online) {
-            } else {
-                alert.style.display = "inline"
-            }
-        }
-    </script>
+    <script src="js/network_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
