--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -10,28 +10,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
-    <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode">
@@ -91,37 +73,7 @@
             <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
         </div>
     </div>
-    <script>
-        function removeURLParams() {
-            window.location.href = "/detail"
-        }
-        function pageControl(dir) {
-            if (dir == "fwd") {
-                let params = new URLSearchParams(document.location.search);
-                let url = new URL(location.href);
-                const targetPage = Number(params.get('page')) +1
-                url.searchParams.delete('page');
-                url.searchParams.append('page', targetPage);
-                // deepcode ignore OR: ignored because it is on client and clients fault and I dont care
-                window.location.href = url;
-            } else if (dir == "bck") {
-                let params = new URLSearchParams(document.location.search);
-                if (params.get('page') >= 1) {
-                    let url = new URL(location.href);
-                    var targetPage = Number(params.get('page')) - 1
-                    url.searchParams.delete('page');
-                    url.searchParams.append('page', targetPage);
-                    // deepcode ignore OR: ignored because it is on client and clients fault and I dont care
-                    window.location.href = url;
-                } else {
-                    location.reload()
-                }
-            }
-        }
-        function goToHome() {
-            window.location.href = "/";
-        }
-    </script>
+    <script src="js/detail_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
