--- a/src/manage.ejs
+++ b/src/manage.ejs
@@ -11,9 +11,9 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
+    <script src="js/form.min.js"></script>
     <style>
         a,a:visited {
             text-align: center;
@@ -72,49 +72,7 @@
             <br><br>
         </div>
     </div>
-    <script>
-        var currenturl = window.location.href;
-        var URL = new URL(currenturl);
-        function removeURLParams() {
-            let url = new URL(location.href)
-            let urlparams = new URLSearchParams(url.search);
-            urlparams.delete('team');
-            urlparams.delete('page');
-            urlparams.delete('event');
-            location.reload();
-        }
-        function goToHome() {
-            window.location.href = "/";
-        }
-        function deleteFormSubmission() {
-            const targetSubmission = URL.searchParams.get('submissionID'); 
-            window.location.href = "/deleteSubmission?submissionID=" + targetSubmission;
-        }
-        function deleteSubmission(database, submission, linkID) {
-            document.getElementById(linkID).innerHTML = "Preparing Request...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("POST", '/deleteSubmission', true);
-            xhr.withCredentials = true;
-            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-
-            xhr.onreadystatechange = () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("done")
-                document.getElementById(linkID).innerHTML = "Deleted!";
-            } else if (xhr.status === 401) {
-                console.log("failure")
-                document.getElementById(linkID).innerHTML = "401 Access Denied";
-            } else if (xhr.status === 400) {
-                console.log("failure")
-                document.getElementById(linkID).innerHTML = "400 Bad Request";
-            } else {
-                console.log("awaiting response")
-                document.getElementById(linkID).innerHTML = "Deleting...";
-            }
-            }
-            xhr.send('db=' + database + '&submissionID=' + submission);
-        }
-    </script>
+    <script src="js/manage_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
