add calgames as option

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -40,7 +40,8 @@
                     <label>Event Code: </label><br>
                     <select name="event">
                     <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="WOOD" selected>WOOD - CalGames</option>
                 </select>
                 </fieldset>
                 <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Search</button><br>
