average the grid data

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -71,6 +71,9 @@
                         <th>Teleop Score</th>
                         <th>Teleop Charge</th>
                         <th>Grid Points</th>
+                        <th>Cubes (L/M/H/T)</th>
+                        <th>Cones (L/M/H/T)</th>
+                        <th>Total (L/M/H/T)</th>
                         <th>Cycle Time</th>
                         <th>Match Performance Score</th>
                     </tr>
