--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -71,9 +71,9 @@
                         <th>Teleop Score</th>
                         <th>Teleop Charge</th>
                         <th>Grid Points</th>
-                        <th>Cubes</th>
-                        <th>Cones</th>
-                        <th>Total</th>
+                        <th colspan="4">Cubes</th>
+                        <th colspan="4">Cones</th>
+                        <th colspan="4">Total</th>
                         <th>Cycle Time</th>
                         <th>Match Performance Score</th>
                     </tr>
