space table columns

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -65,17 +65,30 @@
             <div style="overflow-x: auto; width: 95vw;">
                 <table>
                     <tr>
-                        <th>Match Number</th>
+                        <th rowspan="2">Match Number</th>
                         <th>Auto Score</th>
-                        <th>Auto Charge</th>
+                        <th rowspan="2">Auto Charge</th>
                         <th>Teleop Score</th>
-                        <th>Teleop Charge</th>
-                        <th>Grid Points</th>
-                        <th colspan="4">Cubes</th>
-                        <th colspan="4">Cones</th>
-                        <th colspan="4">Total</th>
-                        <th>Cycle Time</th>
-                        <th>Match Performance Score</th>
+                        <th rowspan="2">Teleop Charge</th>
+                        <th rowspan="2">Grid Points</th>
+                        <th colspan="3">Cubes</th>
+                        <th colspan="3">Cones</th>
+                        <th colspan="3">Total</th>
+                        <th rowspan="2">Cycle Time</th>
+                        <th rowspan="2">Match Performance Score</th>
+                    </tr>
+                    <tr>
+                        <th>B/M/T</th>
+                        <th>B/M/T</th>
+                        <th>Low</th>
+                        <th>Mid</th>
+                        <th>High</th>
+                        <th>Low</th>
+                        <th>Mid</th>
+                        <th>High</th>
+                        <th>Low</th>
+                        <th>Mid</th>
+                        <th>High</th>
                     </tr>
                     <%- resultsBody %>
                 </table>
