--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -40,8 +40,8 @@
                         <option value="CCCC" selected>CCCC - Capital City Classic</option>
                     </select>
                     </fieldset>
-                    <button type="submit" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;">Search</button><br>
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                    <button type="submit" class="uiButton actionButton">Search</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: var(--gameFlairColor);">here</a></small>
             </form>
@@ -66,8 +66,8 @@
                         </h5>
                     </fieldset>
                     <!--buttons-->
-                    <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br>
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton actionButton" onclick='pageControl("bck")'>Previous</button>&emsp;<button class="uiButton actionButton" onclick='pageControl("fwd")'>Next</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <br><br>
                 <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: var(--gameFlairColor);">here</a></small>
