--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -21,7 +21,7 @@
         <div class="container" id="search" style="display: <%= displaySearch %>;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4 style="color: red; display: <%= errorDisplay %>">
                     <%= errorMessage %>
                 </h4>
@@ -50,7 +50,7 @@
         <div class="container" id="results" style="display: <%= displayResults %>;">
             <!--flex is shown-->
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4><br>
                 <fieldset>
                     <fieldset>
